--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/ # Persit data
 
   redis:
-    image: redis:7-alpine # Using a specific minor version and alpine for smaller image instead of postgres:latest
+    image: redis:7-alpine # Using a specific minor version and alpine for smaller image instead of redis:latest
     container_name: redis_cache
     ports:
       - "6379:6379" # Host:Container
